src/objects/Reference_Fulfillment__c.object
<CustomObject>
    <fields>
        <fullName>Account_Requesting__c</fullName>
        <formula>Reference_Requests__r.Account_Requesting__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Requesting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments_Notes__c</fullName>
        <label>Comments &amp; Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_providing_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company Providing Reference</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Reference Fulfillment</relationshipLabel>
        <relationshipName>Reference_Fulfillment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Reference_is_Scheduled_for__c</fullName>
        <label>Date Scheduled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Get_GW_Person__c</fullName>
        <label>Get GW Person</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Overall_feeling_of_reference__c</fullName>
        <label>Overall feeling of reference</label>
        <picklist>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negative</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Person_Responsible_for_Fulfiling_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person Responsible for Fulfiling Request</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reference_Fulfillment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product(s) to Discuss</label>
        <picklist>
            <picklistValues>
                <fullName>BillingCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ClaimCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DataHub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Portals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidewire Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InfoCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InsuranceSuite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PolicyCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Predictive Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBTs</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>RefAccEmail__c</fullName>
        <formula>Reference_Requests__r.Guidewire_Person_Requesting__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RefAccEmail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RefAccountEmail__c</fullName>
        <formula>Reference_Requests__r.Account_Requesting__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RefAccountEmail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RefCRMemail__c</fullName>
        <formula>Company_providing_Reference__r.Customer_Relationship_Mgr__r.FirstName+&quot; &quot;+Company_providing_Reference__r.Customer_Relationship_Mgr__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RefCRMemail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Fulfillment_Feedback__c</fullName>
        <inlineHelpText>Input Feedback from Company providing reference</inlineHelpText>
        <label>Company Providing Reference (Feedback)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reference_Request_Feed_back__c</fullName>
        <inlineHelpText>Input Feedback from Company requiring reference</inlineHelpText>
        <label>Company Requiring Reference</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reference_Requests__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Request Details</label>
        <referenceTo>Reference_Request__c</referenceTo>
        <relationshipLabel>Reference Fulfillment</relationshipLabel>
        <relationshipName>Reference_Fulfillment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Sent__c</fullName>
        <label>Request Sent to Customer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined by CRM / Sales Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined by Customer</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Reference_Selected__c</fullName>
        <label>Type of Reference Selected</label>
        <picklist>
            <picklistValues>
                <fullName>Phone Call / WebEx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onsite Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analysts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (User Groups, etc.)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Reference Fulfillment</label>
    <listViews>
        <fullName>All_Reference_Fullfilment</fullName>
        <columns>NAME</columns>
        <columns>Account_Requesting__c</columns>
        <columns>Company_providing_Reference__c</columns>
        <columns>Date_Reference_is_Scheduled_for__c</columns>
        <columns>Person_Responsible_for_Fulfiling_Request__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Reference Fullfilment</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RefFulfil-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Fulfillment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Date_Scheduled_to_be_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  OR(  ISPICKVAL(Status__c , &quot;Confirmed&quot; ), ISPICKVAL(Status__c , &quot;Completed&quot;) ), ISBLANK (Date_Reference_is_Scheduled_for__c ) )</errorConditionFormula>
        <errorDisplayField>Date_Reference_is_Scheduled_for__c</errorDisplayField>
        <errorMessage>Please Fill The Field</errorMessage>
    </validationRules>
</CustomObject>